added get availability
